[Saved]: 保存到云端

--- a/content/AutoAim/自瞄系统原理/识别求解器.md
+++ b/content/AutoAim/自瞄系统原理/识别求解器.md
@@ -5,13 +5,11 @@ type: "docs"
 toc: true
 ---
 
-# 识别器
-
-## 总览
+## 识别器
 
 识别器要求分析装甲板的颜色,分为颜色数字识别和二维角点信息获取
 
-### 颜色数字识别
+### 颜色数字识别方案概览
 
 | 方案名          | 描述                                                             | 特征                                             |
 | --------------- | ---------------------------------------------------------------- | ------------------------------------------------ |
@@ -20,7 +18,7 @@ toc: true
 | 传统 + dnn      | 通过传统视觉识别灯条，识别装甲板，框选 ROI 之后通过 DNN 识别数字 | 误识别概率高，实现难度中等                       |
 | 传统 + 模式识别 | 传统视觉方案+模式识别                                            | 又累效果又不太好，，实现难度未知（队里没人写过） |
 
-### 灯条角点识别
+### 灯条角点识别方案概览
 
 | 方案名       | 描述                                               | 特征                     |
 | ------------ | -------------------------------------------------- | ------------------------ |
@@ -28,7 +26,7 @@ toc: true
 | PCA          | 通过主成分分析方法，得到灯条的中轴，进而得到目标点 | 较难实现，效果好         |
 | 最小二乘拟合 | 最小二乘法拟合灯条中轴                             | 效果不太行，实现难度适中 |
 
-## yolo + PCA 方案
+### yolo + PCA 方案
 
 这是目前我认为最好的方案，模型我们选择深大开源模型，在我们平台上可以达到最高 120fps
 
