[Add] 基本补全识别求解器

--- a/content/AutoAim/自瞄系统原理/识别求解器.md
+++ b/content/AutoAim/自瞄系统原理/识别求解器.md
@@ -3,6 +3,7 @@ title: "识别器 + PNP求解器"
 weight: 3
 type: "docs"
 toc: true
+math: true
 ---
 
 ## 识别器
@@ -26,8 +27,47 @@ toc: true
 | PCA          | 通过主成分分析方法，得到灯条的中轴，进而得到目标点 | 较难实现，效果好         |
 | 最小二乘拟合 | 最小二乘法拟合灯条中轴                             | 效果不太行，实现难度适中 |
 
-### yolo + PCA 方案
+## yolo + PCA 方案求角点
 
 这是目前我认为最好的方案，模型我们选择深大开源模型，在我们平台上可以达到最高 120fps
 
-# 施工中
+### yolo 模型
+
+> 感谢深大开源地址 \
+> https://bbs.robomaster.com/article/54091\
+> 教程其 [`Git仓库`](https://github.com/broalantaps/RobotDetectionModel)有，这里偷个懒
+
+### PCA 灯条识别
+
+PCA 在这里的作用是找出二位点集分布方差最大的方向，也就是数据的主轴，我们在此把图像的亮度信息利用上
+
+1. 亮度信息提取与归一化\
+   这里可以选择`转灰度图`或者使用` hsv 空间`获取亮度，之后对处理后图像进行`最大最小归一化`到 `0~1`,并等距采样为`[0,...,255]`的值
+
+$$
+x' = \left\lfloor \frac{x - x_{\min}}{x_{\max} - x_{\min}} \times 255 \right\rfloor
+$$
+
+$$
+x \in \{ I(p) \mid p \in \Omega \} \
+were \ \Omega \ is \ ROI
+$$
+
+2. 构建 PCA 所使用的点集\
+   为了利用亮度信息，我们一个点添加在集合中出现其在图像中的亮度次
+
+$$
+M = \{ (p, x'(p)) \mid p \in \Omega \}
+$$
+
+其中 \((p,x'(p))\) 表示点 \(p\) 出现了 \(x'(p)\) 次
+
+之后通过 opencv 的 pca 算法求解主轴和平均值即可得到灯条角点
+
+## Pnp 求解
+
+pnp 有多种算法，原理自己查，这里我们使用对平面四边形求解最有优势的 IPPE_SQUERE 算法即可，反正调用函数就好了原理我就不写了。~~也忘得差不多了~~
+
+## 代码分析
+
+挖个坑，之后填
